// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RepoLink > renders a fragment when "to" is null 1`] = `
<DocumentFragment>
  <span
    class=""
  >
    <span>
      my/
      <span>
        repo
      </span>
    </span>
  </span>
</DocumentFragment>
`;

exports[`RepoLink > renders a link when "to" is set 1`] = `
<DocumentFragment>
  <a
    class=""
    href="http://example.com"
  >
    <span>
      my/
      <span>
        repo
      </span>
    </span>
  </a>
</DocumentFragment>
`;
